# api/handler/subscriber.go
@@ -100,12 +100,7 @@ func GetSubscriberExtendedByID(s *subscriber.Service) gorouter.Handler {
 // @Produce json
 // @Param limit query int false "Maximum number of items to return; 0 means no limit"
 // @Param offset query int false "Number of items to skip"
-// @Param surname query string false "Search by subscriber surname"
-// @Param name query string false "Search by subscriber name"
-// @Param patronymic query string false "Search by subscriber patronymic"
-// @Param accountNumber query string false "Search by subscriber account number"
-// @Param phoneNumber query string false "Search by subscriber phone number"
-// @Param address query string false "Search by metering object address"
+// @Param search query string false "Search by surname, name, patronymic, account number, phone number, or address"
 // @Success 200 {array} subscriber.Subscriber
 // @Failure 400 {object} gorouter.ErrorResponse
 // @Failure 500 {object} gorouter.ErrorResponse
@@ -113,14 +108,9 @@ func GetSubscriberExtendedByID(s *subscriber.Service) gorouter.Handler {
 func GetAllSubscribers(s *subscriber.Service) gorouter.Handler {
 	return func(c gorouter.Context) error {
 		var vars struct {
-			Limit         int    `query:"limit"`
-			Offset        int    `query:"offset"`
-			Surname       string `query:"surname"`
-			Name          string `query:"name"`
-			Patronymic    string `query:"patronymic"`
-			AccountNumber string `query:"accountNumber"`
-			PhoneNumber   string `query:"phoneNumber"`
-			Address       string `query:"address"`
+			Limit  int    `query:"limit"`
+			Offset int    `query:"offset"`
+			Search string `query:"search"`
 		}
 		if err := c.Vars(&vars); err != nil {
 			return fmt.Errorf("failed to read list params: %w", err)
@@ -130,12 +120,7 @@ func GetAllSubscribers(s *subscriber.Service) gorouter.Handler {
 			c.Ctx(),
 			pagination.Pagination{Limit: vars.Limit, Offset: vars.Offset},
 			subscriber.ListFilter{
-				Surname:       vars.Surname,
-				Name:          vars.Name,
-				Patronymic:    vars.Patronymic,
-				AccountNumber: vars.AccountNumber,
-				PhoneNumber:   vars.PhoneNumber,
-				Address:       vars.Address,
+				Search: vars.Search,
 			},
 		)
 		if err != nil {
