# docs/swagger.json
@@ -1009,49 +1009,9 @@
                         }
                     },
                     {
-                        "description": "Search by subscriber surname",
+                        "description": "Search by surname, name, patronymic, account number, phone number, or address",
                         "in": "query",
-                        "name": "surname",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "description": "Search by subscriber name",
-                        "in": "query",
-                        "name": "name",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "description": "Search by subscriber patronymic",
-                        "in": "query",
-                        "name": "patronymic",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "description": "Search by subscriber account number",
-                        "in": "query",
-                        "name": "accountNumber",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "description": "Search by subscriber phone number",
-                        "in": "query",
-                        "name": "phoneNumber",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "description": "Search by metering object address",
-                        "in": "query",
-                        "name": "address",
+                        "name": "search",
                         "schema": {
                             "type": "string"
                         }
